--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./imgs/6.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Your Seamless Shopping Experience From India"
-    />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>Your Indian Shop</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
 
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="./imgs/6.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Your Seamless Shopping Experience From India" />
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Your Indian Shop</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
+  <script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="6570bc5a8780904e970702e9" async></script>
+
+</body>
+
 </html>
