--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <title>Your Indian Shop</title>
 </head>
-
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
